spacing fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,7 @@ p {
     overflow: hidden;
 
     padding-top: 150px;
+    /*border: 1px red solid;*/
 }
 
 
@@ -137,7 +138,7 @@ nav {
     height: 500px;
 
     padding-top: 0;
-    margin: 0 auto 10rem auto;
+    margin: 0 auto 0 auto;
 
     transition: all 0.7s;
 }
